--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 江家相信龙
+title: 重庆对中国的意义
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1954618/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1954728/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
