--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,7 +1,7 @@
 ---
-title: 中共企图对台湾搞大一统的侵略行为是可议的
+title: 俄乌冲突中，俄罗斯的政治经济打算
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1954446/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1954460/)
 
 台灣寶島農場
 
