--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,7 +1,7 @@
 ---
-title: 新疆的灾难
+title: 为什么谈重庆
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1954718/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1954851/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
