--- a/gnews/30.md
+++ b/gnews/30.md
@@ -1,7 +1,7 @@
 ---
-title: 制造疫苗的mRNA是毒
+title: 百姓被玩死
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1955074/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1955116/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
