--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥对国内战友买喜币三个保证
+title: 从不是为百姓谋福利
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1957239/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1957331/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
