--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,7 +1,7 @@
 ---
-title: 东西方较量
+title: 对共产党有利的三个工程
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1957220/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1957248/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
