--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,7 +1,7 @@
 ---
-title: 毛泽东的风水工程
+title: 中共对黑白很敏感
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1957319/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1957385/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
