--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,7 +1,7 @@
 ---
-title: 共产党把它磁场变化的称为龙脉
+title: 三合山七哥出生的山（一）
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1957602/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1957668/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
