--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,7 +1,7 @@
 ---
-title: 好消息一个个来
+title: 华尔道夫饭店多人染上病毒死亡
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1958151/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1958188/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
