--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,7 +1,7 @@
 ---
-title: 因为放盘古片段3人被抓
+title: 出大事是天意
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1958167/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1958353/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
