--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,7 +1,7 @@
 ---
-title: 祭旗
+title: 普金周边死人非同寻常 盘古龙尾死人非同寻常
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1958129/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1958326/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
