--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,7 +1,7 @@
 ---
-title: 中国红牛严滨是华尔道夫现任老板
+title: 出大事是天意
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1958321/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1958353/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
