--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,7 +1,7 @@
 ---
-title: 普金住的华尔道夫酒店吴小晖的酒店
+title: 共产党不是想象中的牛 七哥是最好的证明
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1958312/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1958343/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
