--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,7 +1,7 @@
 ---
-title: 出大事是天意
+title: 第一次建交美国带给中国什么
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1958353/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1958406/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
