--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 北京冬奥会 政治游戏参赛人员蹭吃蹭喝
+title: 张艺谋真敢忽悠中国人
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1958710/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1958734/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
