--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,7 +1,7 @@
 ---
-title: 当时西方骨子里面就佩服中国人
+title: 北京冬奥会历史上最惨的冬奥会
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1958671/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1958683/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
