--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,7 +1,7 @@
 ---
-title: 喜联储喜币是游戏的制定者（二）
+title: Hpay点到点支付即隐私又快速
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1958980/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1958990/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
