--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,7 +1,7 @@
 ---
-title: 习近平的冬奥开幕式共产党噩梦新的开始
+title: 习近平的冬奥开幕式共产党已成孤家寡人
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1959023/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1959036/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
