--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,7 +1,7 @@
 ---
-title: 习近平的冬奥开幕式 相由心生充满了恐惧
+title: 习近平的冬奥开幕式共产党已成孤家寡人
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1959015/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1959036/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
