--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,7 +1,7 @@
 ---
-title: 新中国联邦灭掉共产党后要实现
+title: 共产党的中国有多荒唐
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1959521/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1959554/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
