--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,7 +1,7 @@
 ---
-title: 错误的理解大自然是迷信 正确的理解大自然是信仰
+title: 中国贫困山区人畜不分群居
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1959496/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1959549/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
