--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,7 +1,7 @@
 ---
-title: 养老金是统治阶级 统治人类最愚蠢最低级的办法
+title: 新中国联邦灭掉共产党后要实现
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1959509/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1959521/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
