--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,7 +1,7 @@
 ---
-title: 错误的理解大自然是迷信 正确的理解大自然是信仰
+title: 共产党的中国有多荒唐
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1959496/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1959554/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
