--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,7 +1,7 @@
 ---
-title: 喜马拉雅山就是须弥山
+title: 喜币创造的神奇
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1959561/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1959636/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
