--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,7 +1,7 @@
 ---
-title: 老人会活得更有尊严有更多的选择权
+title: 共产党的中国有多荒唐
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1959537/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1959554/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
