--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥对自己是摇滚歌星的感受
+title: 共产党卑鄙无耻的拍摄手法
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1962569/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1962688/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
