--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,7 +1,7 @@
 ---
-title: 隆美尔将军
+title: 七哥不接受采访 也会有别的版本出来
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1962628/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1962756/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
