--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,7 +1,7 @@
 ---
-title: 将军问七哥的事
+title: 报道要彻底毁掉新中国联邦
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1962609/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1962744/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
