--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,7 +1,7 @@
 ---
-title: 报道之阴险：想要中国人恨我们
+title: 被共产党洗脑的人不认为自己在作恶
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1962739/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1962770/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
