--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥不接受采访 也会有别的版本出来
+title: 忠字舞的意思
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1962756/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1962787/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
