--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,7 +1,7 @@
 ---
-title: Isobel Yeung有多Low .
+title: 西方人认可共产主义的原因
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1962798/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1962834/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
