--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,7 +1,7 @@
 ---
-title: 被共产党洗脑的人不认为自己在作恶
+title: 共产主义的本质是什么 有多人真正了解
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1962770/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1962821/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
