--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,7 +1,7 @@
 ---
-title: 忠字舞的意思
+title: 共产主义的本质是什么 有多人真正了解
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1962787/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1962821/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
