--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,7 +1,7 @@
 ---
-title: 被共产党洗脑的人不认为自己在作恶
+title: 西方哪些人相信共产主义
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1962770/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1962813/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
