--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,7 +1,7 @@
 ---
-title: 西方人认可共产主义的原因
+title: HBO的目的和所求利益
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1962834/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1962838/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
