--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,7 +1,7 @@
 ---
-title: 习猪头怕老百姓因为房子造反
+title: 相信轮回,相信报应
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1963109/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1963219/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
