--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,7 +1,7 @@
 ---
-title: 自信的三个方法
+title: 刘亚洲的野心与不得志（下）
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1963547/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1963602/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
