--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥谈风水与迷信（中）
+title: 没有一家制药公司敢承担疫苗责任和后果
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1963660/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1963764/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
