--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥谈风水与迷信（下）
+title: 战友要主动备药
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1963675/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1963820/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
