--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥谈风水与迷信（中）
+title: 对送药的战友要负责任
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1963660/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1963798/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
