--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,7 +1,7 @@
 ---
-title: 战友要主动备药
+title: 七哥18岁追求中国民主的照片失而复得
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1963820/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1963982/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
