--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 共产党竟然想着操控一切事情
+title: 有些人可能是永远的无名英雄
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1964457/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1964508/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
