--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,7 +1,7 @@
 ---
-title: 啥叫天机
+title: 盖特是谁都挡不住的
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1964572/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1964690/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
