--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,7 +1,7 @@
 ---
-title: 胡海峰未来绝对是接班人
+title: 人类的民主不能被利用
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1964522/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1964665/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
