--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,7 +1,7 @@
 ---
-title: 法国无处不在的各种种族冲突
+title: 管理好时间的前提就是你真正的解决问题的能力
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1964649/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1964752/)
 
 编辑/整理：澳雅大直播工作组视频剪辑小队
 
