--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,7 +1,7 @@
 ---
-title: 习近平的习天下
+title: 龙杯和龙椅的故事
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1964796/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1964816/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
