--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,7 +1,7 @@
 ---
-title: 敢于面对坚持，唯真不破
+title: 共产党的巨大人道和体育灾难一定会走向灭亡
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1964852/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1964860/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
