--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,9 +1,9 @@
 ---
-title: 2/6/2022 文贵直播：冬奥会是习太阳一个人的！党内都恨习办冬奥会以及和中共同流合污的运动员
+title: 共产主义本质是奴隶主制度
 ---
-`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1970955/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1971088/)
 
-秘密翻译组-北美组
+台灣寶島農場
 
  
 
