--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,9 +1,9 @@
 ---
-title: 2/6/2022 文贵直播：中共认俄爹是因为西方白人不愿和中共交往，中共只好以俄国是共产主义发源地为由忽悠中国人
+title: 共产主义本质是奴隶主制度
 ---
-`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1971048/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1971088/)
 
-秘密翻译组-北美组
+台灣寶島農場
 
  
 
