--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 喜币最大的交易是俄罗斯和乌克兰
+title: 塞北的雪（四）
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1972803/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1973004/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
