--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,7 +1,7 @@
 ---
-title: 塞北的雪 （五）
+title: 新中国联邦会实现邓丽君小姐的遗愿
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1973014/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1973037/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
