--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,7 +1,7 @@
 ---
-title: 中共诋毁七哥的信用和荣誉怕有人相信七哥
+title: 不允许打着新中国联邦爆料革命的名义去参加政治活动
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1974517/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1974620/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
