--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,7 +1,7 @@
 ---
-title: 美国政府的官僚
+title: 美国的官僚会为此付出血的代价
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1974486/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1974504/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
