--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,7 +1,7 @@
 ---
-title: 七哥再清唱一段
+title: 七哥的三次阳痿（三）
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1974913/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1974971/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
