--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 邪恶的共产党体制
+title: 中国女性是共产党的玩具
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1977090/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1977124/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
