--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,7 +1,7 @@
 ---
-title: 女性是共产党执政的工具
+title: 不明是非
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1977105/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1977144/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
