--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,7 +1,7 @@
 ---
-title: 拯救在中国被绑架女性
+title: 中国社会的悲哀对比西方的文明
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1977129/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1977136/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
