--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,7 +1,7 @@
 ---
-title: 拯救在中国被绑架女性
+title: 新中国联邦今年的三个大惊喜
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1977129/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1977165/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
