--- a/gnews/35.md
+++ b/gnews/35.md
@@ -1,7 +1,7 @@
 ---
-title: 无知成功的代价，习的现状
+title: 共产党要活必须靠美国
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1978095/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1978124/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
