--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 冬奥将如何落幕
+title: 冬奥现上演的剧目，可说了无新意
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1980546/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1980628/)
 
 台灣寶島農場
 
