--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,7 +1,7 @@
 ---
-title: 中共企图利用冬奥让中美关系回暖
+title: 未接种疫苗是正确的决定
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1980478/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1980585/)
 
 台灣寶島農場
 
