--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,7 +1,7 @@
 ---
-title: 冬奥开幕是一场老鼠和狮子的游戏
+title: 沼泽地，世界游戏的定义者
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1980667/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1980735/)
 
 台灣寶島農場
 
