--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,11 +1,9 @@
 ---
-title: 新中国联邦的三件大事
+title: 加拿大卡车司机反疫苗运动背后的中共渗透警讯
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1980646/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1980690/)
 
 台灣寶島農場
-
-
 
  
 
