--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,7 +1,7 @@
 ---
-title: 冬奥开幕是一场老鼠和狮子的游戏
+title: 世界级的高利贷公司
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1980667/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1980706/)
 
 台灣寶島農場
 
