--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,7 +1,7 @@
 ---
-title: 加拿大卡车司机反疫苗运动背后的中共渗透警讯
+title: 沼泽地，世界游戏的定义者
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1980690/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1980735/)
 
 台灣寶島農場
 
