--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,11 +1,9 @@
 ---
-title: 新中国联邦的三件大事
+title: 沼泽地，世界游戏的定义者
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1980646/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1980735/)
 
 台灣寶島農場
-
-
 
  
 
