--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,7 +1,7 @@
 ---
-title: 冬奥现上演的剧目，可说了无新意
+title: 世界级的高利贷公司
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1980628/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1980706/)
 
 台灣寶島農場
 
