--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,7 +1,7 @@
 ---
-title: 世界级的高利贷公司
+title: 沼泽地，世界游戏的定义者
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1980706/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1980735/)
 
 台灣寶島農場
 
