--- a/gnews/28.md
+++ b/gnews/28.md
@@ -1,7 +1,7 @@
 ---
-title: 冬奥开幕是一场老鼠和狮子的游戏
+title: 加拿大卡车司机反疫苗运动背后的中共渗透警讯
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1980667/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1980690/)
 
 台灣寶島農場
 
